# math

./: Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs  lin_regr.rs  main.rs
src/: float.rs  float_ext.rs  graphics.rs  iter.rs  lib.rs  lin_alg.rs  matrix.rs  ml.rs  polynomial.rs  prob.rs  statistics.rs  two_dim.rs  vector.rs
src/statistics/: distance.rs  lin_regr.rs  linear_regression.rs  mean.rs  mod.rs  standard_deviation.rs  variance.rs
src/transformer/: mean_imputer.rs  min_max_scaler.rs  mod.rs  proportion_scaler.rs  standard_scaler.rs
