[workspace]
members = ["cli"]

[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1"
num-traits = "0.2"
primitive = { workspace = true }
serde = { version = "1", features = ["derive"] }
statistical_inference = { git = "https://github.com/Banyc/statistical_inference.git", tag = "v0.0.3" }
strict-num = { workspace = true, features = ["serde"] }
thiserror = "1"

[workspace.dependencies]
primitive = { git = "https://github.com/Banyc/primitive.git", tag = "v0.0.6" }
strict-num = "0.2"
