[package]
name = "math_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
banyc_polars_util = { git = "https://github.com/Banyc/banyc_polars_util.git", tag = "v0.0.2" }
clap = { version = "4", features = ["derive"] }
math = { path = "../" }
polars = { version = "0.40" }
strict-num = "0.2"
